# cookiecutter-django-aptible

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
