[tool.poetry]
name = "django-aptible"
version = "0.1.0"
description = "Hello World Django Aptible App"
authors = ["yourname <yourname@co.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
bcrypt = "^3.2.0"
Django = "^3.1.6"
environs = {version = "8.0.0", extras = ["django"]}
django-cors-headers = "^3.6.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
whitenoise = {extras = ["brotli"], version = "^5.2.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.6.4"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
